libgphoto2 2.3.1.0.trunk

Build:
   * Non-recursive camlib build: Makes "make -j2" useful.
     "./configure --with-drivers=..." still works. Selective camlib
     rebuild is "make -C camlibs agfa_cl20.la" now.
   * Fix sierra and canon drivers picking up old gphoto2 headers.
   * libiconv linking fix for PTP2 driver.
   * Require external libltdl.
   * Ditched autogen.sh, use standard autoreconf from stock autoconf.

libgphoto2 API:
   * New gp_file_new_from_fd() ... Which allows mapping CameraFile to
     UNIX filedescriptors for both reading and writing.

Package / System integration:
   * New syntax for print-camera-list's udev output. See help output.
   * Add new permission setup binary doing Microsoft OS Descriptor
     retrieval for MTP devices not explicitly listed.
     This binary (check-mtp-device) is used by the generated UDEV rules.

------------------------------------------------------------------------

libgphoto2 2.3.1

PTP:
   * Fixed a memory leak in continuous Nikon / Canon capture mode.

Bindings:
   * Moved all bindings into separate packages.

Package / System integration:
   * Add README.packaging file for packagers.
   * Removed obsolete print-usb-usermap. Use
     "print-camera-list usb-usermap usbcam" instead.
   * Fix libgphoto2 symbol list: Removed gpi_gphoto_port_type_map
   * Add new permission setup script doing class based matching for
     PTP class cameras not listed explicitly by USB IDs.
     This script (check-ptp-camera) is used by the generated UDEV rules.

     Example usage:
	 print-camera-list udev-rules mode 660 group plugdev \
              > /etc/udev/rules.d/90-libgphoto2.rules

     or similar and set udevscriptdir='/lib/udev' at configure time or adjust
     the path to check-ptp-camera in the generated /etc/udev/rules.d/90-libgpoto2.rules
     file.

----------------------------------------------------------------------------

libgphoto2 2.3.0

PTP:
   * Improved Nikon remote control